# Shopify-Rank-Tracker

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_daily_tracking.py  streamlit_app.py  vercel.json
app/: data_ingestion.py  main.py
app/api/: apps.py  auth.py  auth_deps.py  collaborators.py  keywords.py  rankings.py  router.py  tracker.py
app/constants/: shopify.py
app/core/: config.py  logger.py  security.py
app/db/: __init__.py  database_config.py  init.py
app/db/models/: __init__.py  ranking.py  user.py
app/db/repositories/: ranking_repository.py
app/schemas/: request.py  response.py
app/services/: browser.py  pagination_service.py  ranking_service.py  search_service.py  tracker_service.py
app/utils/: email.py  screenshot.py  url_utils.py
shopify-ranker-tracker-ui/: index.html  package-lock.json  package.json
shopify-ranker-tracker-ui/src/: App.css  App.tsx  api.ts  index.css  main.tsx
shopify-ranker-tracker-ui/src/components/: CollaboratorsDialog.tsx  CompetitorManager.tsx  DashBoard.tsx  HistoryLog.tsx  HistoryPage.tsx  InvitationsBanner.tsx  KeywordsDialog.tsx  KeywordsManager.tsx  Layout.tsx  LoginRegister.tsx  MetricCards.tsx  PageHeader.tsx  ProfilePage.tsx  QuickActions.tsx  RankChart.tsx  ScraperLogs.tsx  ScreenshotDialog.tsx  Sidebar.tsx
