[project]
name = "shopify-rank-tracker"
version = "0.1.0"
description = "A FastAPI application for tracking Shopify App Store keyword rankings."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn",
    "playwright",
    "pydantic",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "pandas",
    "openpyxl",
    "streamlit",
    "requests",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = [
    "logs*",
    "screenshots*",
    "shopifyvenv*",
]